# liquid-sort-puzzle-solver

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: astar.rs  bfs.rs  bottle.rs  main.rs  position.rs  position_astar.rs  position_bfs.rs
src/astar/: astar.rs  mod.rs  position_astar.rs
src/bfs/: bfs.rs  mod.rs  position_bfs.rs
src/traits/: position.rs
